    (acmurthy via olgan)

    PIG-85: memory optimization (pi_song via olgan)

    PIG-243: Fixing unit tests on windows (daijy via olgan)

    PIG-198: Fixed pig script to pick up hadoop 17 instead of 15 (pi_song via gates). 

    PIG-266: fix warnings caused by HOD (olgan)

    PIG-245: added math functions to the piggybank (ajaygarg via olgan)

    PIG-255: make non-default constructors work for algebraic functions
    (ajaygarg via olgan)

    PIG-272: problem with streaming and intermediate store (acmurthy via olgan)

    PIG-243: make unit tests work on windows (daijy via olgan)

    PIG-271: added tutorial to SVN (olgan)

    PIG-235: memory management improvements (pkamath via olgan)

    PIG-284: target for building source jar (oae via olgan)

    PIG-34: added missing licenses

    PIG-34: added LICENSE, NOTICE and README file

    PIG-291: hod.param parameters not passed properly (thatha via olgan)

    PIG-34: changes to build process to create distribution tar file

    PIG-34: updated CHANGES.txt

    PIG-342: Fix DistinctDataBag to recalculate size after it has spilled. (bdimcheff via gates)

	PIG-472: Added RegExLoader to piggybank, an abstract loader class to parse
	text files via regular espressions (spackest via gates)

	PIG-473: Added CommonLogLoader, a subclass of RegExLoader to piggybank (spackest via gates)

	PIG-474: Added MyRegexLoader, a subclass of RegExLoader, to piggybank (spackest via gates)

    PIG-486: Added SearchEngineExtractor, a piggybank eval func that
	recognizes a set of the most common search engines in a URL and extracts
	the name of the search engine (spackest via gates).

    PIG-487: Added HostExtractor, a piggybank eval func that, given a URL,
	determines the host (spackest via gates).

	PIG-488: Added SearchTermExtractor, a piggybank eval func that, for many
	search engines, recognizes the search term in the URL returns it to the
	caller (spackest via gates).